# flowfull-python-starter

./: .env.example  .gitignore  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  docker-compose.yml  llms-full.txt  llms.txt  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: __init__.py  env.py
app/: __init__.py  main.py
app/config/: environment.py
app/models/: user.py
app/routes/: api.py  health.py
docs/: 00-ARCHITECTURE-OVERVIEW.md  02-CORE-CONCEPTS.md  03-ENVIRONMENT.md  04-USAGE-GUIDE.md  QUICK-REFERENCE.md
scripts/: generate_paseto_key.py
tests/: conftest.py  test_api.py  test_client_ip.py  test_health.py
